# giankolotto-smart-combos

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: eval_from_file.py  example_basic.py  playground.py
src/giankolotto_smart_combos/: __init__.py  benchmark.py  cli.py  config_lotto.py  constraints_lotto.py  eval_lotto.py  smart_lotto_search.py
tests/: test_core.py
