[project]
name = "giankolotto-smart-combos"
version = "0.1.0"
description = "Motore Lotto-compliant per combinazioni con vincoli e pruning."
authors = [{ name = "Giancarlo" }]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/gcomneno/giankolotto-smart-combos"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
